doc_devhelp = custom_target('libskk-devhelp',
  input: libskk_sources,
  output: 'libskk',
  command: [ valadoc,
    '--doclet=devhelp',
    '--directory', '@OUTDIR@',
    '--package-name', 'libskk',
    docs_common_valadoc_flags,
    docs_common_valadoc_deps,
    '@INPUT@',
  ],
  depends: libskk_lib,
  install: true,
  install_dir: libskk_datadir / 'devhelp' / 'references',
)
