doc_gtkdoc = custom_target('libskk-gtkdoc',
  input: libskk_sources,
  output: 'libskk',
  command: [ valadoc,
    '--doclet=gtkdoc',
    '--directory', '@OUTDIR@' / 'libskk',
    '--package-name', 'libskk',
    docs_common_valadoc_flags,
    docs_common_valadoc_deps,
    '@INPUT@',
  ],
  depends: libskk_lib,
  install: true,
  install_dir: libskk_datadir / 'gtk-doc' / 'html',
)
